# templates

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/section1/1-function_templates/: function_templates.md
docs/section1/2-class_templates/: class_templates.md
docs/section1/3-nontype_template_parameters/: nontype_template_parameters.md
docs/section1/4-variadic_templates/: variadic_templates.md
